--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -32,5 +32,6 @@ a {
     max-width: 1536px;
     margin-left: auto;
     margin-right: auto;
-    background-color: re;
+    background-color: rebeccapurple;
+    padding-left: 80;
 }
