--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -33,5 +33,6 @@ a {
     margin-left: auto;
     margin-right: auto;
     background-color: rebeccapurple;
-    padding-left: 80;
+    padding-left: 80px;
+    padding-right: 80px;
 }
