--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -43,4 +43,14 @@ a {
     }
 }
 
-@media screen and (max-width: 1280px)
+@media screen and (max-width: 1280px) {
+    .wrapper {
+        max-width: 1024px;
+    }
+}
+
+@media screen and (max-width: 1280px) {
+    .wrapper {
+        max-width: 1024px;
+    }
+}
