--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -52,6 +52,7 @@ a {
 @media screen and (max-width: 1024px) {
     .wrapper {
         max-width: 768px;
-        
+        padding-left: 40px;
+        padding-right: 40px;
     }
 }
