--- a/blog/styles/globals.css
+++ b/blog/styles/globals.css
@@ -62,3 +62,9 @@ a {
         max-width: 640px;
     }
 }
+
+@media screen and (max-width: 768px) {
+    .wrapper {
+        max-width: 475px;
+    }
+}
